--- a/BSB.html
+++ b/BSB.html
@@ -30,7 +30,7 @@
    				   background-color: rgb(233, 224, 220, 1);">
 
 
-   					<h2 class="container-title">Large shhoe's box</h2>
+   					<h2 class="container-title">Large shoe's box</h2>
    					<p>You will receive 4 different pairs of shoes in this box</p>
 
    				   
